Fix weird header y overflow

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 header {
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
 }
 
